<resources>
    <string name="app_name">NCIPBus</string>

    <string name="nav_time">Время</string>
    <string name="nav_map">Карта</string>
    <string name="nav_bus">Остановка</string>

    <string name="to_itpark_label">До Айти Парка</string>
    <string name="from_itpark_label">Из Айти Парка</string>

    <string name="bus_stop_1">Остановка 30-й Комплекс</string>
    <string name="bus_stop_2">Остановка Магазин "Глобус"</string>
    <string name="bus_stop_3">Остановка Магазин "Океан"</string>
    <string name="bus_stop_4">Остановка Фирменный магазин "КАМАЗ"</string>
    <string name="last_bus_stop">Остановка Айти Парк</string>

    <string name="item_message">Автобус не приедет по этому времени!</string>
    <string name="select_bus_stop">Выберете остановку</string>
    <string name="main_screen">Главный экран</string>

</resources>
