<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingTop="15dp"
    android:paddingEnd="15dp"
    android:paddingBottom="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/bus_stop_1"
        android:textAlignment="center"
        android:textColor="#2d2d2d"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:src="@drawable/ic_down" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/bus_stop_2"
        android:textAlignment="center"
        android:textColor="#2d2d2d"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:src="@drawable/ic_down" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/bus_stop_3"
        android:textAlignment="center"
        android:textColor="#2d2d2d"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:src="@drawable/ic_down" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/bus_stop_4"
        android:textAlignment="center"
        android:textColor="#2d2d2d"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:src="@drawable/ic_down" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/last_bus_stop"
        android:textAlignment="center"
        android:textColor="#2d2d2d"
        android:textSize="24sp" />

</LinearLayout>